--- a/app/css/common.css
+++ b/app/css/common.css
@@ -30,7 +30,7 @@
 }
 
 .movie-list__item img:hover{
-    box-shadow: 0 5px 30px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 5px 25px rgba(0, 0, 0, 0.3);
 }
 
 .movie-list__item .css-truncate.css-truncate-target, .movie-list__item .css-truncate .css-truncate-target{
@@ -51,3 +51,169 @@
     margin-top: 15px;
 }
 /* block: movie-list   end */
+
+
+/* block: series-list start */
+.series-list__item{
+    position: relative;
+    overflow: hidden;
+    perspective: 5000px;
+    perspective-origin: 75% 50%;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+}
+
+.series-list__item a{
+    display: block;
+    height: 250px;
+}
+
+.series-list__item a span{
+    display: block;
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.series-list__item-title{
+    top: 15px;
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: 200;
+}
+
+.series-list__item-genres{
+    top: 43px;
+    font-size: 12px;
+    font-weight: 100;
+    opacity: .5;
+}
+
+.series-list__item a img{
+    display: inline-block;
+    position: absolute;
+    top: 120px;
+    z-index: 2;
+    width: 120px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    outline: 1px solid transparent;
+}
+
+.series-list__item-poster-left{
+    left: 15px;
+}
+
+.series-list__item .series-list__item-poster-middle{
+    z-index: 3;
+    width: 160px;
+    left: 76px;
+    top: 80px;
+    -webkit-box-shadow: 0 0 40px 1px rgba(0, 0, 0, .3);
+    box-shadow: 0 0 40px 1px rgba(0, 0, 0, .3);
+}
+
+.series-list__item-poster-right{
+    right: 15px;
+}
+
+@keyframes leftPosterFlip {
+    100% {
+        transform: rotateY(40deg) rotateZ(-4deg);
+        top: 105px;
+        left: 3px;
+    }
+}
+
+@keyframes rightPosterFlip {
+    100% {
+        transform: rotateY(-40deg) rotateZ(4deg);
+        top: 105px;
+        right: 3px;
+    }
+}
+
+@keyframes leftPosterUnFlip {
+    0% {
+        transform: rotateY(40deg) rotateZ(-4deg);
+        top: 105px;
+        left: 3px;
+    }
+    100% {
+        transform: rotateY(0deg) rotateZ(0deg);
+        top: 120px;
+        left: 15px;
+    }
+}
+
+@keyframes rightPosterUnFlip {
+    0% {
+        transform: rotateY(-40deg) rotateZ(4deg);
+        top: 105px;
+        right: 3px;
+    }
+    100% {
+        transform: rotateY(0deg) rotateZ(0deg);
+        top: 120px;
+        right: 15px;
+    }
+}
+
+@keyframes centralPosterFlip {
+    to {
+        top: 75px;
+        -ms-transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+    }
+}
+
+@keyframes centralPosterUnFlip {
+    from {
+        top: 75px;
+        -ms-transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+    }
+    to {
+        top: 80px;
+        -ms-transform: scale(1);
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+}
+
+.series-item-mouse-in .series-list__item-poster-left {
+    animation: leftPosterFlip 0.2s ease-out;
+    animation-fill-mode: forwards;
+}
+
+.series-item-mouse-in .series-list__item-poster-middle {
+    animation: centralPosterFlip 0.2s ease-out;
+    animation-fill-mode: forwards;
+}
+
+.series-item-mouse-in .series-list__item-poster-right {
+    animation: rightPosterFlip 0.2s ease-out;
+    animation-fill-mode: forwards;
+}
+
+.series-item-mouse-out .series-list__item-poster-left {
+    animation: leftPosterUnFlip 0.2s ease-out;
+    animation-fill-mode: forwards;
+}
+
+.series-item-mouse-out .series-list__item-poster-middle {
+    animation: centralPosterUnFlip 0.2s ease-out;
+    animation-fill-mode: forwards;
+}
+
+.series-item-mouse-out .series-list__item-poster-right {
+    animation: rightPosterUnFlip 0.2s ease-out;
+    animation-fill-mode: forwards;
+}
+/* block: series-list   end */
