MAIN PAGE - footer's padding decreased

--- a/app/css/common.css
+++ b/app/css/common.css
@@ -203,6 +203,11 @@
 /* block: ted-list   end */
 
 /* block: footer start */
+.footer{
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
 .footer__items{
     list-style-type: none;
 }
