--- a/app/src/css/common.scss
+++ b/app/src/css/common.scss
@@ -12,7 +12,7 @@
 }
 
 /* blocks: common styles start */
-.movie-list, .series-list, .ted-list {
+.movie-list, .series-list, .ted-list, .movie-view {
   margin-top: 30px;
 }
 
@@ -31,35 +31,35 @@
 /* block: movie-list start */
 .movie-list__item {
   position: relative;
-}
 
-.movie-list__item img {
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  z-index: 1;
-}
+  img {
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    z-index: 1;
+  }
 
-.movie-list__item img:hover {
-  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.3);
-}
+  img:hover {
+    box-shadow: 0 5px 25px rgba(0, 0, 0, 0.3);
+  }
 
-.movie-list__item .css-truncate.css-truncate-target, .movie-list__item .css-truncate .css-truncate-target {
-  max-width: 170px;
-}
-
-.movie-list__item-desc span {
-  font-size: 14px;
-  font-weight: bold;
-}
-
-.movie-list__item-desc i {
-  font-style: normal;
+  .css-truncate.css-truncate-target, .css-truncate .css-truncate-target {
+    max-width: 170px;
+  }
 }
 
 .movie-list__item-desc {
   text-align: center;
   margin-top: 15px;
+
+  span {
+    font-size: 14px;
+    font-weight: bold;
+  }
+
+  i {
+    font-style: normal;
+  }
 }
 
 /* block: movie-list   end */
@@ -135,40 +135,40 @@
 /* block: ted-list start */
 .ted-list__item {
   position: relative;
-}
 
-.ted-list__item img {
-  -webkit-border-top-left-radius: 3px;
-  -moz-border-top-left-radius: 3px;
-  border-top-left-radius: 3px;
-  -webkit-border-top-right-radius: 3px;
-  -moz-border-top-right-radius: 3px;
-  border-top-right-radius: 3px;
-  position: relative;
-  z-index: 1;
-}
+  img {
+    -webkit-border-top-left-radius: 3px;
+    -moz-border-top-left-radius: 3px;
+    border-top-left-radius: 3px;
+    -webkit-border-top-right-radius: 3px;
+    -moz-border-top-right-radius: 3px;
+    border-top-right-radius: 3px;
+    position: relative;
+    z-index: 1;
+  }
 
-.ted-list__item a {
-  color: #333333;
-  text-decoration: none;
-}
+  a {
+    color: #333333;
+    text-decoration: none;
+  }
 
-.ted-list__item i {
-  font-style: normal;
-  font-size: 11px;
-  display: inline-block;
-  line-height: 1;
-  padding: 4px 8px 3px 8px;
-  position: absolute;
-  right: 8px;
-  top: 100px;
-  z-index: 20;
-  color: #ffffff;
-  font-weight: bold;
-  background: rgba(0, 0, 0, .7);
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
+  i {
+    font-style: normal;
+    font-size: 11px;
+    display: inline-block;
+    line-height: 1;
+    padding: 4px 8px 3px 8px;
+    position: absolute;
+    right: 8px;
+    top: 100px;
+    z-index: 20;
+    color: #ffffff;
+    font-weight: bold;
+    background: rgba(0, 0, 0, .7);
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+  }
 }
 
 .ted-list__item-desc {
@@ -184,24 +184,110 @@
   -moz-border-bottom-right-radius: 3px;
   border-bottom-right-radius: 3px;
   -webkit-box-shadow: 0 2px 0 0 #E7E7E7;
-}
 
-.ted-list__item-desc span {
-  display: inherit;
-  font-size: 14px;
-  line-height: 1.2;
-  font-weight: bold;
+  span {
+    display: inherit;
+    font-size: 14px;
+    line-height: 1.2;
+    font-weight: bold;
+  }
 }
 
 .ted-list__ted-description .blankslate {
   min-height: 188px;
-}
 
-.ted-list__ted-description .blankslate h3 {
-  color: #D0261B;
+  h3 {
+    color: #D0261B;
+  }
 }
 
 /* block: ted-list   end */
+
+/* block: movie-view start */
+.movie-view__description {
+  position: relative;
+  height: 400px;
+  border-radius: 4px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.movie-view__gallery {
+  height: 140px;
+}
+
+.movie-view__description-poster {
+  height: 320px;
+  width: 180px;
+  float: left;
+  margin-left: 50px;
+  margin-top: 40px;
+  position: relative;
+  z-index: 3;
+
+  img {
+    border-radius: 3px;
+  }
+
+  button {
+    position: absolute;
+    bottom: 3px;
+  }
+}
+
+.movie-view__description-info {
+  width: 670px;
+  float: right;
+  margin-right: 50px;
+  margin-top: 40px;
+  color: #ffffff;
+  position: relative;
+  z-index: 3;
+
+  table {
+    width: 100%;
+
+    tr td {
+      height: 320px;
+      vertical-align: bottom;
+    }
+  }
+}
+
+.movie-view__description-title {
+  margin-bottom: 0;
+  margin-top: 10px;
+}
+
+.movie-view__description-data {
+  margin-bottom: 10px;
+
+  span {
+    font-size: 12px;
+    display: inline-block;
+    margin-left: 20px;
+  }
+
+  span:first-child {
+    margin-left: 0;
+  }
+}
+
+.movie-view__description-text{
+  margin-bottom: 0;
+}
+
+.movie-view__description-transparent-bg {
+  position: absolute;
+  width: 100%;
+  height: 400px;
+  top: 0;
+  left: 0;
+  background: rgba(10, 10, 10, .7);
+  border-radius: 4px;
+}
+
+/* block: movie-view   end */
 
 /* block: footer start */
 .footer {
@@ -211,16 +297,16 @@
 
 .footer__items {
   list-style-type: none;
-}
 
-.footer__items li {
-  display: inline-block;
-  margin-left: 10px;
-  font-size: 13px;
-}
+  li {
+    display: inline-block;
+    margin-left: 10px;
+    font-size: 13px;
+  }
 
-.footer__items li:first-child {
-  margin-left: 0;
+  li:first-child {
+    margin-left: 0;
+  }
 }
 
 /* block: footer   end */
