--- a/app/src/css/common.scss
+++ b/app/src/css/common.scss
@@ -1,3 +1,7 @@
+@import "_variables";
+@import "mixins/_border_radius";
+@import "mixins/box_shadow";
+
 .outlined {
   outline: 1px red dotted;
 }
@@ -11,14 +15,14 @@
   min-width: 1020px;
 }
 
-/* blocks: common styles start */
+// blocks: common styles start
 .movie-list, .series-list, .ted-list, .movie-view {
-  margin-top: 30px;
+  margin-top: $section-margin-top;
 }
 
-/* blocks: common styles   end */
+// blocks: common styles   end
 
-/* block: movie-list-header start */
+// block: movie-list-header start
 .movie-list-header .left h3 {
   line-height: 1;
 }
@@ -27,20 +31,18 @@
   font-size: 14px;
 }
 
-/* block: movie-list-header   end */
-/* block: movie-list start */
+// block: movie-list-header   end
+// block: movie-list start
 .movie-list__item {
   position: relative;
 
   img {
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
+    @include border-radius($poster-border-radius);
     z-index: 1;
   }
 
   img:hover {
-    box-shadow: 0 5px 25px rgba(0, 0, 0, 0.3);
+    @include box-shadow($poster-box-shadow);
   }
 
   .css-truncate.css-truncate-target, .css-truncate .css-truncate-target {
@@ -62,14 +64,12 @@
   }
 }
 
-/* block: movie-list   end */
-/* block: series-list start */
+// block: movie-list   end
+// block: series-list start
 .series-list__item {
   position: relative;
   overflow: hidden;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
+  @include border-radius($poster-border-radius);
 }
 
 .series-list__item a {
@@ -106,9 +106,7 @@
   top: 120px;
   z-index: 2;
   width: 120px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
+  @include border-radius($poster-border-radius);
   outline: 1px solid transparent;
 }
 
@@ -121,26 +119,20 @@
   width: 160px;
   left: 76px;
   top: 80px;
-  -webkit-box-shadow: 0 0 40px 1px rgba(0, 0, 0, 0.3);
-  box-shadow: 0 0 40px 1px rgba(0, 0, 0, 0.3);
+  @include box-shadow($series-poster-box-shadow);
 }
 
 .series-list__item-poster-right {
   right: 15px;
 }
 
-/* block: series-list   end */
-/* block: ted-list start */
+// block: series-list   end
+// block: ted-list start
 .ted-list__item {
   position: relative;
 
   img {
-    -webkit-border-top-left-radius: 3px;
-    -moz-border-top-left-radius: 3px;
-    border-top-left-radius: 3px;
-    -webkit-border-top-right-radius: 3px;
-    -moz-border-top-right-radius: 3px;
-    border-top-right-radius: 3px;
+    @include border-radius($poster-border-radius, true, false, false, true);
     position: relative;
     z-index: 1;
   }
@@ -163,9 +155,7 @@
     color: #ffffff;
     font-weight: bold;
     background: rgba(0, 0, 0, .7);
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
+    @include border-radius($poster-border-radius);
   }
 }
 
@@ -175,13 +165,8 @@
   height: 63px;
   padding: 6px 10px;
   overflow-y: hidden;
-  -webkit-border-bottom-left-radius: 3px;
-  -moz-border-bottom-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-  -webkit-border-bottom-right-radius: 3px;
-  -moz-border-bottom-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-  -webkit-box-shadow: 0 2px 0 0 #E7E7E7;
+  @include border-radius($poster-border-radius, false, true, true, false);
+  @include box-shadow($ted-item-box-shadow);
 
   span {
     display: inherit;
@@ -199,13 +184,13 @@
   }
 }
 
-/* block: ted-list   end */
+// block: ted-list   end
 
-/* block: movie-view start */
+// block: movie-view start
 .movie-view__description {
   position: relative;
   height: 400px;
-  border-radius: 4px;
+  @include border-radius($view-movie-block-border-radius);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -224,7 +209,7 @@
   z-index: 3;
 
   img {
-    border-radius: 3px;
+    @include border-radius($poster-border-radius);
   }
 
   button {
@@ -271,7 +256,7 @@
   }
 }
 
-.movie-view__description-text{
+.movie-view__description-text {
   margin-bottom: 0;
 }
 
@@ -282,12 +267,12 @@
   top: 0;
   left: 0;
   background: rgba(10, 10, 10, .7);
-  border-radius: 4px;
+  @include border-radius($view-movie-block-border-radius);
 }
 
-/* block: movie-view   end */
+// block: movie-view   end
 
-/* block: footer start */
+// block: footer start
 .footer {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -307,4 +292,4 @@
   }
 }
 
-/* block: footer   end */
+// block: footer   end
