--- a/app/src/css/app.scss
+++ b/app/src/css/app.scss
@@ -23,273 +23,19 @@
 // blocks: common styles   end
 
 // block: movie-list-header start
-.movie-list-header .left h3 {
-  line-height: 1;
-}
+@import "blocks/movie-list-header";
 
-.movie-list-header .left span {
-  font-size: 14px;
-}
-
-// block: movie-list-header   end
 // block: movie-list start
-.movie-list__item {
-  position: relative;
+@import "blocks/movie-list";
 
-  img {
-    @include border-radius($poster-border-radius);
-    z-index: 1;
-  }
-
-  img:hover {
-    @include box-shadow($poster-box-shadow);
-  }
-
-  .css-truncate.css-truncate-target, .css-truncate .css-truncate-target {
-    max-width: 170px;
-  }
-}
-
-.movie-list__item-desc {
-  text-align: center;
-  margin-top: 15px;
-
-  span {
-    font-size: 14px;
-    font-weight: bold;
-  }
-
-  i {
-    font-style: normal;
-  }
-}
-
-// block: movie-list   end
 // block: series-list start
-.series-list__item {
-  position: relative;
-  overflow: hidden;
-  @include border-radius($poster-border-radius);
-}
+@import "blocks/series-list";
 
-.series-list__item a {
-  display: block;
-  height: 250px;
-}
-
-.series-list__item a span {
-  display: block;
-  position: absolute;
-  width: 100%;
-  text-align: center;
-  text-decoration: none;
-  color: #ffffff;
-}
-
-.series-list__item-title {
-  top: 15px;
-  font-size: 20px;
-  text-transform: uppercase;
-  font-weight: 200;
-}
-
-.series-list__item-genres {
-  top: 43px;
-  font-size: 12px;
-  font-weight: 100;
-  opacity: .5;
-}
-
-.series-list__item a img {
-  display: inline-block;
-  position: absolute;
-  top: 120px;
-  z-index: 2;
-  width: 120px;
-  @include border-radius($poster-border-radius);
-  outline: 1px solid transparent;
-}
-
-.series-list__item-poster-left {
-  left: 15px;
-}
-
-.series-list__item .series-list__item-poster-middle {
-  z-index: 3;
-  width: 160px;
-  left: 76px;
-  top: 80px;
-  @include box-shadow($series-poster-box-shadow);
-}
-
-.series-list__item-poster-right {
-  right: 15px;
-}
-
-// block: series-list   end
 // block: ted-list start
-.ted-list__item {
-  position: relative;
-
-  img {
-    @include border-radius($poster-border-radius, true, false, false, true);
-    position: relative;
-    z-index: 1;
-  }
-
-  a {
-    color: #333333;
-    text-decoration: none;
-  }
-
-  i {
-    font-style: normal;
-    font-size: 11px;
-    display: inline-block;
-    line-height: 1;
-    padding: 4px 8px 3px 8px;
-    position: absolute;
-    right: 8px;
-    top: 100px;
-    z-index: 20;
-    color: #ffffff;
-    font-weight: bold;
-    background: rgba(0, 0, 0, .7);
-    @include border-radius($poster-border-radius);
-  }
-}
-
-.ted-list__item-desc {
-  border: 1px #f3f3f3 solid;
-  border-top: none;
-  height: 63px;
-  padding: 6px 10px;
-  overflow-y: hidden;
-  @include border-radius($poster-border-radius, false, true, true, false);
-  @include box-shadow($ted-item-box-shadow);
-
-  span {
-    display: inherit;
-    font-size: 14px;
-    line-height: 1.2;
-    font-weight: bold;
-  }
-}
-
-.ted-list__ted-description .blankslate {
-  min-height: 188px;
-
-  h3 {
-    color: #D0261B;
-  }
-}
-
-// block: ted-list   end
+@import "blocks/ted-list";
 
 // block: movie-view start
-.movie-view__description {
-  position: relative;
-  height: 400px;
-  @include border-radius($view-movie-block-border-radius);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.movie-view__gallery {
-  height: 140px;
-}
-
-.movie-view__description-poster {
-  height: 320px;
-  width: 180px;
-  float: left;
-  margin-left: 50px;
-  margin-top: 40px;
-  position: relative;
-  z-index: 3;
-
-  img {
-    @include border-radius($poster-border-radius);
-  }
-
-  button {
-    position: absolute;
-    bottom: 3px;
-  }
-}
-
-.movie-view__description-info {
-  width: 670px;
-  float: right;
-  margin-right: 50px;
-  margin-top: 40px;
-  color: #ffffff;
-  position: relative;
-  z-index: 3;
-
-  table {
-    width: 100%;
-
-    tr td {
-      height: 320px;
-      vertical-align: bottom;
-    }
-  }
-}
-
-.movie-view__description-title {
-  margin-bottom: 0;
-  margin-top: 10px;
-}
-
-.movie-view__description-data {
-  margin-bottom: 10px;
-
-  span {
-    font-size: 12px;
-    display: inline-block;
-    margin-left: 20px;
-  }
-
-  span:first-child {
-    margin-left: 0;
-  }
-}
-
-.movie-view__description-text {
-  margin-bottom: 0;
-}
-
-.movie-view__description-transparent-bg {
-  position: absolute;
-  width: 100%;
-  height: 400px;
-  top: 0;
-  left: 0;
-  background: rgba(10, 10, 10, .7);
-  @include border-radius($view-movie-block-border-radius);
-}
-
-// block: movie-view   end
+@import "blocks/movie-view";
 
 // block: footer start
-.footer {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.footer__items {
-  list-style-type: none;
-
-  li {
-    display: inline-block;
-    margin-left: 10px;
-    font-size: 13px;
-  }
-
-  li:first-child {
-    margin-left: 0;
-  }
-}
-
-// block: footer   end
+@import "blocks/footer";
