VIDEO PLAYER - a basic video player is initialized GULP - added watcher after .js files GIT - '/app/src/video/' folder added to .gitignore

--- a/app/src/css/app.scss
+++ b/app/src/css/app.scss
@@ -22,7 +22,7 @@
 }
 
 // blocks: common styles start
-.movie-list, .series-list, .ted-list, .movie-view {
+.movie-list, .series-list, .ted-list, .movie-view, .video-player {
   margin-top: $section-margin-top;
 }
 
