LAYOUT - added 'font awesome' Created 'dark theme' for head (like on Github)

--- a/app/src/css/_variables.scss
+++ b/app/src/css/_variables.scss
@@ -1,3 +1,8 @@
+// header dark theme
+$header-dark-theme-bg-color: #24292E;
+$header-dark-theme-searchbox-bg-color: #3F4347;
+$header-dark-theme-searchbox-bg-color-on-focus: #4A4E52;
+
 // sections (movies list, cartoons list, series list... are all sections)
 $section-margin-top: 30px;
 
