--- a/app/src/css/app.scss
+++ b/app/src/css/app.scss
@@ -1,6 +1,7 @@
 @import "_variables";
 @import "mixins/_border_radius";
 @import "mixins/box_shadow";
+@import "blocks/header";
 @import "blocks/movie-list-header";
 @import "blocks/movie-list";
 @import "blocks/series-list";
