--- a/app/src/css/video-js.css
+++ b/app/src/css/video-js.css
@@ -1,3 +1,8 @@
+.video-js{
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
 .video-js .vjs-big-play-button .vjs-icon-placeholder:before, .video-js .vjs-control .vjs-icon-placeholder:before, .video-js .vjs-modal-dialog, .vjs-modal-dialog .vjs-modal-dialog-content {
   position: absolute;
   top: 0;
