--- a/app/src/css/_variables.scss
+++ b/app/src/css/_variables.scss
@@ -18,3 +18,7 @@ $ted-item-box-shadow: 0 2px 0 0 #E7E7E7;
 
 // view movie page
 $view-movie-block-border-radius: 4px;
+$movie-view-description-height: 400px;
+
+//view series page
+$series-view-description-height: 500px;
