--- a/app/src/css/app.scss
+++ b/app/src/css/app.scss
@@ -7,6 +7,7 @@
 @import "blocks/series-list";
 @import "blocks/ted-list";
 @import "blocks/movie-view";
+@import "blocks/series-view";
 @import "blocks/footer";
 
 .outlined {
@@ -23,7 +24,7 @@
 }
 
 // blocks: common styles start
-.movie-list, .series-list, .ted-list, .movie-view, .video-player {
+.movie-list, .series-list, .ted-list, .movie-view, .video-player, .series-view {
   margin-top: $section-margin-top;
 }
 
