VIEW SERIES - layout is ready

--- a/app/src/css/app.scss
+++ b/app/src/css/app.scss
@@ -24,7 +24,7 @@
 }
 
 // blocks: common styles start
-.movie-list, .series-list, .ted-list, .movie-view, .video-player, .series-view {
+.movie-list, .series-list, .ted-list, .movie-details, .video-player, .series-details {
   margin-top: $section-margin-top;
 }
 
