VIEW SERIES - custom scrollbar init added Added title to video player (currently playing season N / episode N) Blocks 'movie-view' & 'series-view' renamed to 'movie-detail' & 'series-detail' respectively according to BEM methodology

--- a/app/src/css/app.scss
+++ b/app/src/css/app.scss
@@ -6,8 +6,8 @@
 @import "blocks/movie-list";
 @import "blocks/series-list";
 @import "blocks/ted-list";
-@import "blocks/movie-view";
-@import "blocks/series-view";
+@import "blocks/_movie-details";
+@import "blocks/_series-details";
 @import "blocks/footer";
 
 .outlined {
